# FastCTX

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  seceret  server.py
backend/: .dockerignore  .env.tpl  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  notes.md  poc.py  pyproject.toml
backend/api/: common.py  documents.py  main.py
backend/demo/: mcp_server.py  run_server.sh
backend/demo/example/: DatabaseConnection.java  Main.java  UserService.java
backend/demo/helloworld/: app.js  components.tsx  config.json  main.py  utils.py
ctx/: main.py
ctx/api/: graph.py
ctx/services/: indexing_service.py  neo4j_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: global-error.tsx  globals.css  layout-client.tsx  layout.tsx  page.tsx
frontend/components/: graph-visualization.tsx
frontend/lib/: graph-data.ts
tests/: test_indexing_service.py  test_main_mcp_tools.py  test_neo4j_service.py
